--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
     "midi-sounds-react": "^1.2.54",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-materialize": "^2.4.6",
     "react-scripts": "2.0.4"
   },
   "scripts": {
